BRGD-28 CICD Boilerplate

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,6 +9,7 @@
         <BaseIntermediateOutputPath>$(MSBuildThisFileDirectory)obj/$(MSBuildProjectName)/</BaseIntermediateOutputPath>
         <BaseOutputPath>$(MSBuildThisFileDirectory)bin/$(MSBuildProjectName)/</BaseOutputPath>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup Condition="Exists('$(MSBuildThisFileDirectory)\.editorconfig')">
