--- a/cicd.template.yml
+++ b/cicd.template.yml
@@ -98,7 +98,7 @@ Resources:
         Location: !Sub https://github.com/${GithubOwner}/${GithubRepo}.git
         ReportBuildStatus: true
         BuildStatusConfig:
-          Context: AWS CodeBuild (cfn)
+          Context: AWS CodeBuild (brighid-discord-adapter)
           TargetUrl: !Sub https://sso.brigh.id/start/shared?destination=https://console.aws.amazon.com/codesuite/codebuild/${AWS::AccountId}/projects/${AWS::StackName}-build/build/$CODEBUILD_BUILD_ID/?region=${AWS::Region}
 
   TestReportGroup:
