--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ env:
   variables:
     DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: "true"
     DOTNET_NOLOGO: "true"
+    CONFIGURATION: "Release"
 
 phases:
   install:
@@ -23,7 +24,7 @@ phases:
 
       - dotnet restore
       - dotnet publish --no-restore
-      - dotnet test -c Release --logger trx --no-build
+      - dotnet test --logger trx --no-build
 
       - |
         set -eo pipefail
