--- a/src/EventParserGenerator/EventParserGenerator.csproj
+++ b/src/EventParserGenerator/EventParserGenerator.csproj
@@ -16,7 +16,7 @@
 
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
-      <TargetPathWithTargetPlatformMoniker Include="$(OutputPath)Common.dll" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(OutputPath)Brighid.Discord.Common.dll" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
 </Project>
