--- a/tests/Tests.csproj
+++ b/tests/Tests.csproj
@@ -6,16 +6,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.16.0" /> 
-        <PackageReference Include="AutoFixture.NUnit3" Version="4.16.0" /> 
+        <PackageReference Include="AutoFixture.AutoNSubstitute" Version="4.16.0" />
+        <PackageReference Include="AutoFixture.NUnit3" Version="4.16.0" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="NSubstitute" Version="4.2.2" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" /> 
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
         <PackageReference Include="nunit" Version="3.13.1" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="../src/Core/Core.csproj" />
+        <ProjectReference Include="../src/Common/Common.csproj" />
     </ItemGroup>
 </Project>
