--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EventParserGenerator\EventParserGenerator.csproj" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\Generators\Generators.csproj" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Common\Common.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
