--- a/cicd.template.yml
+++ b/cicd.template.yml
@@ -165,6 +165,7 @@ Resources:
         ApprovalNotificationFunction: !ImportValue cfn-core:ApprovalNotificationFunctionArn
         FileFromZipArn: !ImportValue cfn-core:ExtractFileFromZipFunctionArn
         AccountId: !Ref AWS::AccountId
+        MessageTopicArn: !Ref SnsTopic
     Metadata:
       cfn-lint:
         config:
