--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -75,6 +75,7 @@ Resources:
             Options:
               awslogs-group: !Ref LogGroup
               awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: brighid
           Environment:
             - Name: Encrypted__Gateway__Token
               Value: !Ref GatewayToken
