BRGD-57 Identity Client Credentials

--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -28,6 +28,14 @@ Parameters:
     Description: Whether or not to enable service stopping on the cluster
 
 Resources:
+  IdentityApplication:
+    Type: Custom::IdentityApplication
+    Properties:
+      ServiceToken: !ImportValue identity:ApplicationTopicArn
+      Name: brighid-discord-adapter
+      Roles:
+        - Basic
+
   Cluster:
     Type: AWS::ECS::Cluster
     Properties:
@@ -85,6 +93,10 @@ Resources:
               Value: !Ref MetricsNamespace
             - Name: Sns__TopicArn
               Value: !Ref MessageTopicArn
+            - Name: Identity__ClientId
+              Value: !GetAtt IdentityApplication.Id
+            - Name: Encrypted__Identity__ClientSecret
+              Value: !GetAtt IdentityApplication.EncryptedSecret
 
   TaskRole:
     Type: AWS::IAM::Role
