--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.1.9" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.0.13" />
+    <PackageReference Include="Brighid.Identity.Client" Version="0.2.0-beta6" />
     <PackageReference Include="Destructurama.Attributed" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
