BRGD-57 Identity Client Credentials + Only Emit Messages For Registered Users (#47)

--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -27,7 +27,19 @@ Parameters:
       - "false"
     Description: Whether or not to enable service stopping on the cluster
 
+  IdentityServerUri:
+    Type: String
+    Description: URI of the identity server.
+
 Resources:
+  IdentityApplication:
+    Type: Custom::IdentityApplication
+    Properties:
+      ServiceToken: !ImportValue identity:ApplicationTopicArn
+      Name: brighid-discord-adapter
+      Roles:
+        - Basic
+
   Cluster:
     Type: AWS::ECS::Cluster
     Properties:
@@ -85,6 +97,12 @@ Resources:
               Value: !Ref MetricsNamespace
             - Name: Sns__TopicArn
               Value: !Ref MessageTopicArn
+            - Name: Identity__IdentityServerUri
+              Value: !Ref IdentityServerUri
+            - Name: Identity__ClientId
+              Value: !GetAtt IdentityApplication.Id
+            - Name: Encrypted__Identity__ClientSecret
+              Value: !GetAtt IdentityApplication.EncryptedSecret
 
   TaskRole:
     Type: AWS::IAM::Role
