--- a/src/RestQueue/RestQueue.csproj
+++ b/src/RestQueue/RestQueue.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\Models\Models.csproj" />
         <ProjectReference Include="..\Logging\Logging.csproj" />
     </ItemGroup>
 </Project>
