BRGD-70 URL Builder

--- a/tests/Tests.csproj
+++ b/tests/Tests.csproj
@@ -17,5 +17,6 @@
 
     <ItemGroup>
         <ProjectReference Include="../src/GatewayAdapter/GatewayAdapter.csproj" />
+        <ProjectReference Include="../src/RestQueue/RestQueue.csproj" />
     </ItemGroup>
 </Project>
