--- a/src/Generators/Generators.csproj
+++ b/src/Generators/Generators.csproj
@@ -11,12 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
 
   <Target Name="GetDependencyTargetPaths">
     <ItemGroup>
-      <TargetPathWithTargetPlatformMoniker Include="$(OutputPath)Brighid.Discord.Common.dll" IncludeRuntimeDependency="false" />
+      <TargetPathWithTargetPlatformMoniker Include="$(OutputPath)Brighid.Discord.Core.dll" IncludeRuntimeDependency="false" />
     </ItemGroup>
   </Target>
 </Project>
