--- a/src/RestQueue/RestQueue.csproj
+++ b/src/RestQueue/RestQueue.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.SQS" Version="3.7.0.17" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
