--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <GATEWAY_ADAPTER_IMAGE_TAG Condition="$(GATEWAY_ADAPTER_IMAGE_TAG) == ''">brighid/discord-gateway-adapter</GATEWAY_ADAPTER_IMAGE_TAG>
+    <GATEWAY_ADAPTER_IMAGE_TAG Condition="$(GATEWAY_ADAPTER_IMAGE_TAG) == ''">brighid/discord-adapter</GATEWAY_ADAPTER_IMAGE_TAG>
     <DockerImageTag>$(GATEWAY_ADAPTER_IMAGE_TAG)</DockerImageTag>
   </PropertyGroup>
 
@@ -21,7 +21,10 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.0-alpha.2" />
   </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\Generators\Generators.csproj" OutputItemType="Analyzer" PrivateAssets="all" />
@@ -29,4 +32,8 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Tests" />
+    <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
+  </ItemGroup>
 </Project>
