--- a/.editorconfig
+++ b/.editorconfig
@@ -92,3 +92,7 @@ dotnet_diagnostic.SA1601.severity = none
 dotnet_diagnostic.CS1591.severity = none
 dotnet_diagnostic.SA1600.severity = none
 dotnet_diagnostic.SA1601.severity = none
+
+[obj/**.cs]
+dotnet_analyzer_diagnostic.category-Style.severity = none
+dotnet_diagnostic.SA1633.severity = none
