BRGD-79 Add Topic Subscription

--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -222,3 +222,12 @@ Resources:
               - sqs:SendMessage
               - sqs:SendMessageBatch
             Resource: !GetAtt RestQueue.Arn
+
+  ResponseHandlerSubscription:
+    Type: AWS::SNS::Subscription
+    Properties:
+      Protocol: lambda
+      Endpoint: !GetAtt ResponseHandler.Arn
+      TopicArn: !Ref ResponseTopic
+      FilterPolicy:
+        Brighid.SourceSystem: [discord]
