--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     entrypoint: dotnet watch --project src/Adapter run
     working_dir: /app
     restart: unless-stopped
+    ports:
+      - 80:80
     volumes:
       - ./:/app
       - ~/.aws:/root/.aws
