Add Impersonator Role to Identity Application

--- a/deploy/brighid-discord-adapter.template.yml
+++ b/deploy/brighid-discord-adapter.template.yml
@@ -85,6 +85,7 @@ Resources:
       Name: brighid-discord-adapter
       Roles:
         - Basic
+        - Impersonator
 
   RestQueue:
     Type: AWS::SQS::Queue
