--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,9 @@ services:
       Environment: local
       CONFIGURATION: Debug
       Identity__IdentityServerUri: ${IDENTITY_SERVER_URI}
+      Identity__ClientId: ${IDENTITY_CLIENT_ID}
+      Identity__ClientSecret: ${IDENTITY_CLIENT_SECRET}
+      Commands__ServiceUri: ${COMMANDS_SERVICE_URI}
       Database__Host: db
       Database__Name: ${DB_NAME}
       Database__User: ${DB_USER}
