--- a/src/Adapter/Adapter.csproj
+++ b/src/Adapter/Adapter.csproj
@@ -13,7 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Brighid.Identity.Client" Version="0.3.3" />
+    <PackageReference Include="Brighid.Identity.Client" Version="0.4.0-beta1" />
+    <PackageReference Include="Brighid.Commands.Client" Version="0.1.0-beta3" />
     <PackageReference Include="AWSSDK.CloudWatch" Version="3.7.1.26" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.2" />
     <PackageReference Include="Destructurama.Attributed" Version="2.0.0" />
