BRGD-119 Environment Specific Prefixes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       Identity__ClientId: ${IDENTITY_CLIENT_ID}
       Identity__ClientSecret: ${IDENTITY_CLIENT_SECRET}
       Commands__ServiceUri: ${COMMANDS_SERVICE_URI}
+      Commands__DefaultPrefix: '-'
       Database__Host: db
       Database__Name: ${DB_NAME}
       Database__User: ${DB_USER}
